--- a/index.html
+++ b/index.html
@@ -162,6 +162,44 @@ nav ul li a:hover {
         <a href="#" class="btn">Explore Our Products</a>
     </div>
 </section>
+    <section class="products">
+    <div class="products-container">
+        <h2>Our Published Products</h2>
+        <p class="subtitle">Real products. Real users. Built with long-term vision.</p>
+
+        <div class="product-grid">
+
+            <div class="product-card">
+                <img src="assets/tictactoe.png" alt="Tic Tac Toe Pro">
+                <h3>Tic Tac Toe Pro</h3>
+                <p>Modern competitive classic game experience.</p>
+                <a href="#" class="product-btn">View on Play Store</a>
+            </div>
+
+            <div class="product-card">
+                <img src="assets/alfaaz.png" alt="Alfaaz-e-Dil">
+                <h3>Alfaaz-e-Dil</h3>
+                <p>Premium poetry and quotes application.</p>
+                <a href="#" class="product-btn">View on Play Store</a>
+            </div>
+
+            <div class="product-card">
+                <img src="assets/qrninja.png" alt="QR Ninja">
+                <h3>QR Ninja</h3>
+                <p>Fast and lightweight QR & barcode scanner.</p>
+                <a href="#" class="product-btn">View on Play Store</a>
+            </div>
+
+            <div class="product-card">
+                <img src="assets/agemaster.png" alt="Age Master">
+                <h3>Age Master</h3>
+                <p>Accurate age calculator with clean UI.</p>
+                <a href="#" class="product-btn">View on Play Store</a>
+            </div>
+
+        </div>
+    </div>
+</section>
 
 </body>
 </html>
