--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Adinova Labs | Mobile App & Game Studio</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 
 <style>
 * {
