--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <div class="floating-glow"></div>
 
     <div class="hero-content">
-        <h1 class="fade-in">Crafting the Future of<br>Interactive Worlds</h1>
+        <h1 class="fade-in">
+Crafting the Future of Interactive Worlds
+</h1>
         <p class="fade-in-delay">
             Independent studio crafting scalable mobile apps and ambitious game worlds.
         </p>
